# dotfiles

./: .fdignore  .gitmodules
.config/alacritty/: alacritty.toml
.config/catppuccin/: catppuccin-fzf-mocha.sh
.config/gdb-dashboard/: init
.config/nvim/: init.lua  lazy-lock.json
.config/nvim/lua/: globals.lua
.config/nvim/lua/core/: basic.lua  keymap.lua  lazy.lua
.config/nvim/lua/plugins/: autopairs.lua  blink-cmp.lua  blink.lua  bufferline.lua  catppuccin.lua  conform.lua  indent-blankline.lua  lazydev.lua  lspconfig.lua  lspsaga.lua  lualine.lua  mason-lspconfig.lua  mason.lua  mini.lua  neo-tree.lua  none-ls.lua  nvim-tree.lua  nvim-treesitter.lua  nvim-web-devicons.lua  telescope.lua  todo-comments.lua  tokyonight.lua  treesitter.lua
.config/nvim/lua/plugins/lsp/: mason.lua
.config/scripts/: gdb
.config/templates/llvm/: CMakeLists.txt  main.cpp
.config/templates/llvm/scripts/: compile.sh
.config/tmux/: tmux.conf
.config/yadm/: bootstrap
.config/zsh/: .zshrc
alacritty/: alacritty.toml
git/: config
tmux/: tmux.conf
yadm/: bootstrap
zsh/: .zshenv  .zshrc
